src/objects/ADvendio__PacketComponent__c.object
<CustomObject>
    <description>Defines packet and its components products.</description>
    <fields>
        <fullName>ADvendio__ComponentAdPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Ad-Price of current component Ad-Spec being used within the packet. It will be considered only if the Distribution of packet Ad-Spec is &apos;Individual&apos;.</description>
        <inlineHelpText>Enter the Ad-Price of current component Ad-Spec being used within the packet. It will be considered only if the Distribution of packet Ad-Spec is &apos;Individual&apos;.</inlineHelpText>
        <label>Component AdPrice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ADvendio__Ad_price__c.ADvendio__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ADvendio__Ad_price__c.ADvendio__Ad_Spec__c</field>
                <operation>equals</operation>
                <valueField>$Source.ADvendio__ComponentAdSpec__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Packet Components</relationshipLabel>
        <relationshipName>PacketComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ComponentAdSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Ad-Spec as component being used within the packet.</description>
        <inlineHelpText>Enter the Ad-Spec as component being used within the packet.</inlineHelpText>
        <label>Component AdSpec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>Packets</relationshipLabel>
        <relationshipName>Packets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ComponentListPrice__c</fullName>
        <description>The list price being used of current component Ad-Spec within the packet.</description>
        <inlineHelpText>Enter a list price being used instead of using it of current component Ad-Spec within the packet.</inlineHelpText>
        <label>Component List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ComponentOptional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To mark a component as deletable. Works only with distribution individual.</description>
        <inlineHelpText>If checked the package component can be deleted in the Media Configuration.</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__PacketAdSpec__c</fullName>
        <description>The packet AdSpec, to which a component AdSpec belongs.</description>
        <inlineHelpText>The packet AdSpec, to which a component AdSpec belongs.</inlineHelpText>
        <label>Packet AdSpec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>Packet Components</relationshipLabel>
        <relationshipName>PacketComponents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__PacketItemAdPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dies ist die Verlinkung zum AdPrice des Paket-Kopfes.</inlineHelpText>
        <label>Packet Item Ad Price</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ADvendio__Ad_price__c.ADvendio__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ADvendio__Ad_price__c.ADvendio__Ad_Spec__c</field>
                <operation>equals</operation>
                <valueField>$Source.ADvendio__PacketAdSpec__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Packet Components (Packet Item Ad Price)</relationshipLabel>
        <relationshipName>Packet_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Prorated__c</fullName>
        <label>Ratio</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Packet Component</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0}</displayFormat>
        <label>Packet Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packet Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>